# plugin-fanqie

./: .gitignore  CMakeLists.txt  CMakePresets.json  IPlugin.h  README.md  fanqie.cpp  fanqie.h  logger.h  plugin.json
.github/workflows/: artifact.yml  artifact.yml_dis  build.yml  ci.yml  release.yml  release.yml_dis
toolchain/: toolchain-windows.cmake
utils/: db.h  progress_bar.h  task.h  utils.h
